# rms-metadata-tools

./: .flake8  .gitignore  .readthedocs.yaml  .requirements.txt.kate-swp  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-cloud.txt  requirements.txt  setup.cfg  venv
.cursor/rules/: bug_report.mdc  dependency_management.mdc  doc_dev_guide.mdc  doc_how_to.mdc  doc_python.mdc  doc_readme.mdc  doc_user_guide.mdc  environment.mdc  filecache.mdc  how_to.mdc  logging.mdc  pull_request.mdc  python.mdc  python_testing.mdc
.cursor/skills/critique-documentation/: SKILL.md
.cursor/skills/critique-test-suite/: SKILL.md
.cursor/skills/python-codebase-analysis/: SKILL.md  reference.md
.cursor/skills/run-all-checks/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
.github/workflows/: publish_to_pypi.yml  publish_to_test_pypi.yml  run-tests.yml
cloud_tests/: .log.txt.kate-swp  log.txt
cloud_tests/parallel_addition/: config.yml  generate_addition_tasks.py  parallel-addition-job.db  worker_addition.py  worker_addition_exceptions.py  worker_addition_factory.py
cloud_tests/test1/: cloud_test1.py  config1.yaml  my-processing-job.db  test1_startup.sh  test1_tasks.json
cloud_tests/test2/: cloud_test2.py  config2.yaml  my-processing-job.db  test2_tasks.json  test_startup2.sh
critiques/: code_critique.md  documentation_critique.md  final_report.md  tests_critique.md
docs/: conf.py  index.rst  module.rst
docs/dev_guide/: dev_guide.rst  dev_guide_architecture.rst  dev_guide_conventions.rst  dev_guide_cumulative_subsystem.rst  dev_guide_environment.rst  dev_guide_extending.rst  dev_guide_geometry_subsystem.rst  dev_guide_index_subsystem.rst  dev_guide_introduction.rst  dev_guide_layout.rst  dev_guide_support_subsystem.rst
docs/dev_guide/api/: api.rst  columns.rst  core.rst  cumulative_support.rst  geometry_support.rst  index_support.rst
docs/user_guide/: user_guide.rst  user_guide_appendix_hosts.rst  user_guide_cloud.rst  user_guide_configuration.rst  user_guide_cumulative.rst  user_guide_examples.rst  user_guide_geometry.rst  user_guide_index.rst  user_guide_installation.rst  user_guide_overview.rst
metadata_tools/: __init__.py  columns.py  common.py  cumulative_support.py  defs.py  geometry_support.py  index_support.py  label_support.py  stage.sh  util.py
metadata_tools/column/: COLUMNS_BODY.py  COLUMNS_RING.py
metadata_tools/hosts/GO_0xxx/: .GO_0xxx_geometry.py.kate-swp  .GO_0xxx_index_cloud.py.kate-swp  .gcp_index_config.yml.kate-swp  .gcp_index_startup.sh.kate-swp  GO_0xxx_cumulative.py  GO_0xxx_cumulative_cloud.py  GO_0xxx_geometry.py  GO_0xxx_geometry_cloud.py  GO_0xxx_index.py  GO_0xxx_index_cloud.py  ___test_file.json  addition_tasks.json  cumulative_tasks.json  gcp_cumulative_config.yml  gcp_cumulative_startup.sh  gcp_geometry_config.yml  gcp_geometry_startup.sh  gcp_index_config.yml  gcp_index_startup.sh  gcp_startup_common.sh  geometry_config.py  geometry_tasks.json  host_config.py  host_init.py  index_config.py  index_tasks.json  log.txt  metadata-cumulative-job.db  metadata-geometry-job.db  metadata-index-job.db  metadata-index-job_in_queue_original.json  tasks.json
metadata_tools/hosts/GO_0xxx/templates/: GO_0xxx_body_summary.lbl  GO_0xxx_ring_summary.lbl  GO_0xxx_sky_summary.lbl  GO_0xxx_supplemental_index.lbl  host_defs.lbl  host_description.lbl
metadata_tools/hosts/GO_0xxx/tests/: test_geometry.py  test_index.py
metadata_tools/templates/: body_summary_columns.lbl  edge_on_definition.lbl  inventory.lbl  ring_summary_columns.lbl  ring_summary_details.lbl  sky_summary.lbl  sky_summary_columns.lbl
plans/: plan1_split_geometry_support.md  plan2_test_suite.md
scripts/: read-docs.sh  run-all-checks.sh
src/metadata_tools/: __init__.py  bodies.py  columns.py  common.py  cumulative_support.py  defs.py  geometry_support.py  index_formats.py  index_support.py  label_support.py  metadata-cumulative-job.db  metadata-geometry-job.db  metadata-index-job.db  task_list_support.py  util.py  util_ranges.py  util_textfiles.py
src/metadata_tools/cli/: _host.py  cumulative.py  cumulative_cloud.py  geometry.py  geometry_cloud.py  index.py  index_cloud.py  task_list.py
src/metadata_tools/column/: COLUMNS_RING.py  COLUMNS_SUN.py
src/metadata_tools/columns/: __init__.py  body.py  ring.py  sky.py  sun.py
src/metadata_tools/geometry_support/: __init__.py  bodies_select.py  formats.py  formatting.py  masks.py  prep.py  process.py  record.py  suite.py  tables.py
src/metadata_tools/hosts/: .gcp_common_startup.sh.kate-swp  __init__.py  gcp_common_startup.sh  generate_startup_scripts.py
src/metadata_tools/hosts/GO_0xxx/: .gcp_geometry_startup.sh.kate-swp  .gcp_index_startup.sh.kate-swp  GO_0xxx_cumulative.py  GO_0xxx_cumulative_cloud.py  GO_0xxx_geometry.py  GO_0xxx_geometry_cloud.py  GO_0xxx_index.py  GO_0xxx_index_cloud.py  __init__.py  gcp_cumulative_config.yml  gcp_cumulative_startup.sh  gcp_geometry_config.yml  (+13 more)
src/metadata_tools/index_support/: __init__.py  key_fns.py  process.py  table.py
src/metadata_tools/templates/: sky_summary_columns.lbl
tests/: archive_support.py  conftest.py  test_cloud.py  test_common.py  test_cumulative_support.py  test_geometry.py  test_geometry_columns_contract.py  test_geometry_constructors.py  test_geometry_formatting.py  test_geometry_masks.py  test_geometry_prep.py  test_geometry_process.py  test_geometry_record.py  test_geometry_tables.py  test_index.py  test_index_support.py  test_label_support.py  test_task_list.py  test_util_math.py  test_util_names.py  test_util_range_mod360.py  test_util_replace.py  test_util_textfile.py  unittester_support.py
tests/cloud/: .test_cloud.py.kate-swp  config.yaml  config1.yaml  test_cloud.py  test_cloud1.py  test_startup.sh  test_startup1.sh
tests/columns/: __init__.py  conftest.py  test_columns_integration.py  test_ring.py  test_sky.py  test_sun.py
tests/hosts/: __init__.py
tests/hosts/GO_0xxx/: __init__.py  test_geometry.py  test_index.py
venv-metadata/: pyvenv.cfg
venv-test/: pyvenv.cfg
(+6 files in other folders)
