[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "rms-metadata-tools"
dynamic = ["version"]
description = "Generate PDS3 index, geometry, and cumulative metadata tables and labels for planetary science data collections"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.3.0",
  "rms-oops>=0.2.0",
  "rms-filecache>=3.1.0",
  "rms-pdslogger>=3.0.0",
  "rms-julian>=3.0.1",
  "rms-pdsparser>=2.0.0",
  "rms-pdstable>=1.0.3",
  "rms-vicar>=1.2.1",
  "rms-pdstemplate>=2.4.0",
  "rms-textkernel>=1.1.1",
  "fortranformat>=2.0.3",
]
license = {text = "Apache-2.0"}
authors = [
  {name = "Joe Spitale", email = "jspitale@seti.org"}
]
maintainers = [
  {name = "Joe Spitale", email = "jspitale@seti.org"}
]
keywords = [
  "pds", "pds3", "planetary science", "metadata", "geometry",
  "spice", "ring-moon systems", "astronomy",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows"
]

[project.urls]
Homepage = "https://github.com/SETI/rms-metadata-tools"
Documentation = "https://rms-metadata-tools.readthedocs.io/en/latest"
Repository = "https://github.com/SETI/rms-metadata-tools"
Source = "https://github.com/SETI/rms-metadata-tools"
Issues = "https://github.com/SETI/rms-metadata-tools/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = ["tests"]
# TODO Update desired parallelism
addopts = ["-n", "auto", "--cov=src", "--strict-markers", "--strict-config", "-m", "not integration and not requires_archive"]
markers = [
  "integration: requires oops/SPICE host initialization (excluded by default)",
  "requires_archive: requires the $RMS_METADATA holdings tree (excluded by default)",
]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

# PDS3 label templates are read at runtime (see defs.GLOBAL_TEMPLATE_PATH and the
# per-host templates/ directories); they must ship in the wheel.
# py.typed is intentionally NOT declared: the package is not yet fully annotated, so
# advertising it as typed would mislead downstream type checkers.
[tool.setuptools.package-data]
"metadata_tools" = ["templates/*.lbl"]
"metadata_tools.hosts.GO_0xxx" = ["templates/*.lbl"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/metadata_tools/_version.py"

[project.optional-dependencies]
dev = [
  "coverage>=7.0",
  "mypy>=1.0",
  "pymarkdownlnt>=0.9.35",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.8",
  "bandit[toml]>=1.8",
  "pyroma>=4.2",
  "vulture>=2.14",
  "rms-metadata-tools[docs]",
]
docs = [
  "myst-parser",
  "sphinx>=7",
  "sphinxcontrib-mermaid",
  "sphinx-rtd-theme",
]
# Extra dependencies for distributing table generation across GCP via
# rms-cloud-tasks (the hosts/<HOST>/*_cloud.py workers).
cloud = [
  "rms-cloud-tasks>=0.2.0",
  "json-stream>=2.3.3",
]

[project.scripts]
#TODO = "main.metadata_tools:main"

# Tool configuration

[tool.coverage.run]
branch = true
parallel = true
source = ["metadata_tools"]
omit = ["tests/*", "_version.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
]
fail_under = 90

[tool.mypy]
strict = true
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "metadata_tools._version"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# oops (rms-oops) ships no type stubs or py.typed marker.
module = ["oops.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
#  "TODO"
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# Explicit rule set (recommended for library projects). Categories:
# E, W = pycodestyle errors/warnings; F = Pyflakes; I = isort; UP = pyupgrade;
# B = bugbear; SIM = simplify; C4 = comprehensions; A = builtins (no shadowing);
# N = pep8-naming; PT = pytest-style; RUF = Ruff-specific (e.g. unused noqa).
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "A", "N", "PT", "RUF"]
# PT011 - pytest.raises is too broad.
# SIM105 - Use contextlib.suppress for suppressions.
# SIM108 - Use ternary operator for simple if/else.
extend-ignore = ["PT011", "SIM105", "SIM108"]

[tool.ruff.lint.per-file-ignores]
#"TODO" = ["TODO"]

[tool.pymarkdown.plugins.md013]
# Line length (disable so README/CONTRIBUTING can use longer lines).
enabled = false

[tool.pymarkdown.plugins.md033]
# Inline HTML (e.g. <br>) allowed in Markdown.
enabled = false

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
targets = ["src"]

[tool.vulture]
paths = ["src"]
exclude = ["tests/"]
min_confidence = 70
